--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,3 +1,4 @@
 
-
+$d-w: 100;
+$dev: 'browse';
 $font: -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
