--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -13,3 +13,16 @@ body {
     margin: 0;
     -webkit-overflow-scrolling:touch;
 }
+h1,
+h2,
+h3,
+h4,
+h5{
+    margin:0;
+}
+ul,
+li{
+    margin:0;
+    padding:0;
+    list-style: none;
+}
