--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,4 +1,6 @@
 
 $d-w: 100;
-$dev: 'browse';
+$dev: 'phone';
+$is-phone: 1;
+
 $font: -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
