--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -40,3 +40,21 @@ li {
 .scroll {
 	-webkit-overflow-scrolling: touch;
 }
+
+@keyframes dialogShow {
+  from {
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes dialogShow2 {
+  from {
+    transform: translate3d(0, -100%, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
