--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -2,5 +2,6 @@
 $d-w: 100;
 $dev: 'phone';
 $is-phone: 1;
+$dp-color: #5fecf5;
 
 $font: -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
