--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,5 +1,3 @@
-@import './variables';
-@import './mixin';
 
 button,
 html input[type='button'],
@@ -17,7 +15,7 @@ body {
 	height: 100%;
 	min-height: 100%;
 	background: #f5f6f7;
-	-webkit-overflow-scrolling: touch;
+	-webkit-overflow-scrolling: auto;
 
 	&.modal-open {
 		position: fixed;
