--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -15,7 +15,8 @@ body {
 	height: 100%;
 	min-height: 100%;
 	background: #f5f6f7;
-	-webkit-overflow-scrolling: auto;
+	padding-bottom: constant(safe-area-inset-bottom);
+	padding-bottom: env(safe-area-inset-bottom);
 
 	&.modal-open {
 		position: fixed;
