deps: update dependsncies

--- a/template/App.vue.hbs
+++ b/template/App.vue.hbs
@@ -8,7 +8,7 @@
         |<RouterLink to="{{name}}">
         {{name}}
       </RouterLink>
-      {{/each}}}}
+      {{/each}}
     </div>
     <RouterView
       name="head"
